# Novel-8

./: CMakeLists.txt  README.md
include/: CPU.h
src/: CMakeLists.txt  CPU.cpp  main.cpp
